--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Ykzir Network Access</title>
-  <link rel="icon" href="file:///C:/icons/ykzir_logo_2025.ico" type="image/x-icon" />
+  <link rel="icon" href="ykzir_logo_2025.ico" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Ubuntu Font -->
